src/objects/Order__c.object
<CustomObject>
    <fields>
        <fullName>ARMS_Account_ID__c</fullName>
        <label>ARMS Account ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ARMS_Account_Number__c</fullName>
        <label>ARMS Account Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ARMS_Credit_Term__c</fullName>
        <label>ARMS Credit Term</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ARMS_Resp_Business_Profile__c</fullName>
        <description>ARMS field</description>
        <label>ARMS Resp Business Profile</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <formula>Account__r.RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Acquisition_Type__c</fullName>
        <label>Acquisition Type</label>
        <picklist>
            <picklistValues>
                <fullName>Call</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magazine (Publisher)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magazine (Circulation)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ROAD SHOW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESHOP / ECOMZ (ONLINE)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Additional_Termination_Comments__c</fullName>
        <label>Additional Termination Comments</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Address1__c</fullName>
        <description>ARMS field</description>
        <label>ARMS Address1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address2__c</fullName>
        <description>ARMS field</description>
        <label>ARMS Address2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address3__c</fullName>
        <description>ARMS field</description>
        <label>ARMS Address3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin_Charge__c</fullName>
        <label>Admin Charge</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Paid__c</fullName>
        <label>Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approved_Debt_Exposure_Amount__c</fullName>
        <label>Approved Debt Exposure – Amount</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Subscription to be renewed.</description>
        <label>Base Subscription</label>
        <referenceTo>Zuora__Subscription__c</referenceTo>
        <relationshipLabel>Orders (Subscription for Renewal)</relationshipLabel>
        <relationshipName>Orders_Renewal</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Account_Creation_Mode__c</fullName>
        <label>Billing Account Creation Mode</label>
        <picklist>
            <picklistValues>
                <fullName>Create New Billing Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use existing Billing Account</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_Account_External_ID__c</fullName>
        <formula>Billing_Account__r.Zuora__External_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Account External ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Account_ID__c</fullName>
        <label>Billing Account ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Billing Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND (3 OR 4) AND (2 OR 4 OR 5)</booleanFilter>
            <errorMessage>Please select a Billing Account with correct Billing Type</errorMessage>
            <filterItems>
                <field>Zuora__CustomerAccount__c.Zuora__Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.Billing_Type__c</field>
                <operation>equals</operation>
                <valueField>Zuora__CustomerAccount__c.Billing_Type__c</valueField>
            </filterItems>
            <filterItems>
                <field>Zuora__CustomerAccount__c.Billing_Type__c</field>
                <operation>equals</operation>
                <valueField>$Source.Billing_Type__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.isOrderLegacy__c</field>
                <operation>notEqual</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>Zuora__CustomerAccount__c.Legacy_Billing_Account_Id__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Zuora__CustomerAccount__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Contact</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2</booleanFilter>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>Contact.Billing_Indicator__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Orders (Billing Contact)</relationshipLabel>
        <relationshipName>Orders2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Type__c</fullName>
        <label>Billing Type</label>
        <picklist>
            <picklistValues>
                <fullName>Full Prepaid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recurring Prepaid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recurring Postpaid</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Blacklist_Colour_Code__c</fullName>
        <description>ARMS field</description>
        <label>ARMS Blacklist Colour Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blacklist_Indicator__c</fullName>
        <description>ARMS field</description>
        <label>ARMS Blacklist Indicator</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blacklist_Reason__c</fullName>
        <description>ARMS field</description>
        <label>ARMS Blacklist Reason</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Block_House_No__c</fullName>
        <description>ARMS field</description>
        <label>ARMS Block/House No</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Secondary__c</fullName>
        <description>ARMS field</description>
        <label>ARMS Building/Secondary</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Profile__c</fullName>
        <description>ARMS field</description>
        <label>ARMS_Business Profile</label>
        <picklist>
            <picklistValues>
                <fullName>NORMAL</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>GIRO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GOVT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Sector__c</fullName>
        <label>Business Sector</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COS_Urgent_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>COS Urgent Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Care_of_Attention_to_Indicator__c</fullName>
        <description>ARMS field</description>
        <label>ARMS Care-of/Attention-to Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Care_of_Attention_to_Party__c</fullName>
        <description>ARMS field</description>
        <label>ARMS Care-of/Attention-to Party</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Owner</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Record_Type__c</fullName>
        <label>Case Record Type</label>
        <picklist>
            <picklistValues>
                <fullName>Stop Subscription</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Subscription Request</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Change_of_Subscription_Reason__c</fullName>
        <label>Change of Subscription Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Upgrade package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downgrade packages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change of Product Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change of Frequency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change of Payment Mode</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miscellaneous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change in quantity</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Check_Amount__c</fullName>
        <label>Check Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Check_Dated__c</fullName>
        <label>Check Dated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Check_Issuing_Bank__c</fullName>
        <label>Check Issuing Bank</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_No__c</fullName>
        <label>Check No</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_Number__c</fullName>
        <label>Check Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_Zip__c</fullName>
        <description>ARMS field</description>
        <label>ARMS City/Zip</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Code__c</fullName>
        <label>Company Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cost_Centre__c</fullName>
        <label>Cost Centre</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>ARMS field</description>
        <label>ARMS Country</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_ARMS_Account_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ARMS field</description>
        <label>ARMS_Create ARMS Account Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_ARMS_Customer_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox holds the value of checkbox in VF page when creating Invoice Billing Account.</description>
        <label>ARMS_Create ARMS Customer Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Creation_Mode__c</fullName>
        <label>Creation Mode</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telemarketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Walk-in</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_Amount__c</fullName>
        <label>Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Balance__c</fullName>
        <label>Credit Balance</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Limit_External_Limit__c</fullName>
        <label>Credit Limit – External Limit</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Limit_Internal_Limit__c</fullName>
        <label>Credit Limit – Internal Limit</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Risk_Rating__c</fullName>
        <description>ARMS field</description>
        <label>ARMS Credit Risk Rating</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Term_Reference__c</fullName>
        <label>Credit Term Reference</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cust_Giro_Acct_Number__c</fullName>
        <label>Cust Giro Acct Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cust_Giro_Bank_Number__c</fullName>
        <label>Cust Giro Bank Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Create_Date__c</fullName>
        <description>ARMS field</description>
        <label>ARMS Customer Create Date</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <description>ARMS field</description>
        <label>ARMS_Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_No__c</fullName>
        <description>ARMS field</description>
        <label>ARMS_Customer No</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Status__c</fullName>
        <label>ARMS Customer Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOW_Pattern__c</fullName>
        <label>DOW Pattern</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DTL_Date__c</fullName>
        <label>DTL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Debt_Management_Treatment__c</fullName>
        <description>ARMS field</description>
        <label>ARMS_Debt Management Treatment</label>
        <picklist>
            <picklistValues>
                <fullName>NORM</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>SUBH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GOVT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deleted_Transaction__c</fullName>
        <formula>Subscription__r.Zuora__ContractEffectiveDate__c  &gt;  Case_Owner__r.Stop_Date__c</formula>
        <label>Deleted Transaction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delivery_Charge_Type__c</fullName>
        <inlineHelpText>H - HDB
L - Landed
C - Condo
N/Z - No Delivery Charge
S/9 - Special Delivery Charge</inlineHelpText>
        <label>Delivery Charge Type</label>
        <picklist>
            <picklistValues>
                <fullName>H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Delivery_Charge__c</fullName>
        <label>Delivery Charge</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Delivery_Start_Date__c</fullName>
        <description>The most earliest start date among of the related order line items</description>
        <label>Delivery Start Date</label>
        <summarizedField>Order_Line_Item__c.Start_Date__c</summarizedField>
        <summaryForeignKey>Order_Line_Item__c.Order__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Earliest_Stop_Date__c</fullName>
        <label>Earliest Stop Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <description>This field is used to amend existing subscription.</description>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eligible_for_Retention__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eligible for Retention</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FP_Del_Usage__c</fullName>
        <description>This will be the usage of delivery charge if full payment.</description>
        <label>FP Del Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fee_Override__c</fullName>
        <label>Fee Override</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Floor_No__c</fullName>
        <description>ARMS field</description>
        <label>ARMS Floor No</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Prepaid_Delivery_Charge__c</fullName>
        <label>Full Prepaid Delivery Charge</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Full_Prepaid_Inc_Del_Charge__c</fullName>
        <formula>IF(OR(Total_Full_Prepaid_Charge__c &gt; 0, ISPICKVAL(Other_Payment_Mode__c, &apos;Freelist&apos;)), Full_Prepaid_Delivery_Charge__c + Total_Full_Prepaid_Charge__c + Total_Postage_Charge__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full_Prepaid Inc Del Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GL_Code__c</fullName>
        <description>Payment_Mode__c = Other
Other_Payment_Mode__c = Internal Charge</description>
        <label>GL Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GST_Out_Of_Scope_Indicator__c</fullName>
        <description>ARMS field</description>
        <label>ARMS GST Out Of Scope Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_No__c</fullName>
        <description>ARMS field</description>
        <label>ARMS ID No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Type__c</fullName>
        <description>ARMS field</description>
        <label>ARMS ID Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Informed_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Informed Customer?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Term__c</fullName>
        <label>Initial Term</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Start_Date__c</fullName>
        <description>Gets the latest start date amongs OLIs</description>
        <label>Latest Start Date</label>
        <summarizedField>Order_Line_Item__c.Start_Date__c</summarizedField>
        <summaryForeignKey>Order_Line_Item__c.Order__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Legacy_Create_By__c</fullName>
        <label>Legacy Create By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Create_Date__c</fullName>
        <label>Legacy Create Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Update_By__c</fullName>
        <label>Legacy Update By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Update_Date__c</fullName>
        <label>Legacy Update Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Delivery_Charge_for_Full_Payment__c</fullName>
        <label>Monthly Delivery Charge for Full Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Months_Between_Start_End__c</fullName>
        <label>Months Between Start/End</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Quantity__c</fullName>
        <description>This field is used to amend existing subscription.</description>
        <label>New Quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Vendor_Needed__c</fullName>
        <formula>OR((Total_Non_Vendor_Line_Item__c = Total_Line_Item__c), (Recipient_Contact__r.Address__r.RecordType.Name != &apos;Local&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No Vendor Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Old_Quantity__c</fullName>
        <label>Old Quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Action__c</fullName>
        <label>Order Action</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Legacy_Id__c</fullName>
        <externalId>true</externalId>
        <label>Order Legacy Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Order_Status__c</fullName>
        <label>Order Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Close</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Order_Type1__c</fullName>
        <label>Order Type</label>
        <picklist>
            <picklistValues>
                <fullName>Start</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temp Stop</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <label>Order Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Payment_Mode__c</fullName>
        <label>Other Payment Mode</label>
        <picklist>
            <controllingField>Payment_Mode__c</controllingField>
            <picklistValues>
                <fullName>Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eNets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Parties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Charge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IPP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freelist</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Overridden_Reason__c</fullName>
        <label>Overridden Reason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <label>PO Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P_O_Box_No__c</fullName>
        <description>ARMS field</description>
        <label>ARMS P.O. Box No</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Package ID (Add On)</label>
        <referenceTo>Package__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Package_Name__c</fullName>
        <label>Package Name</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Parent_Account_Id__c</fullName>
        <description>This field is used when getting the Reason Code of the Order Line Item</description>
        <formula>Account__r.ParentId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Case__c</fullName>
        <description>This field is for the auto population of Parent Case field, requirement for Change of Address. Made this field as workaround for Start Sub creation related case.</description>
        <label>Parent Case</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passport_Country_Code__c</fullName>
        <description>ARMS field</description>
        <label>ARMS Passport Country Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Method_ID__c</fullName>
        <label>Payment Method ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Mode__c</fullName>
        <label>Payment Mode</label>
        <picklist>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Prepaid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Postpaid</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <description>ARMS field</description>
        <label>ARMS Postal Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qty_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Qty Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_Code__c</fullName>
        <label>Reason Code</label>
        <picklist>
            <picklistValues>
                <fullName>P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Prefer Vendor Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prefer Cash Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Odd Subscription Patterns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPH Policy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miscellaneous</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_for_Waiver__c</fullName>
        <label>Reason for Waiver</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Recipient_Add_Type__c</fullName>
        <formula>TEXT(Recipient_Contact__r.Address__r.Address_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recipient Add Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Address_Name__c</fullName>
        <formula>Recipient_Contact__r.Address__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recipient Address</label>
        <type>Text</type>
    </fields>
</CustomObject>